# tcp2npipe

./: Cargo.toml  go.mod
cmd/: main.go
internal/: server.go
src/: main.rs
